--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="index.js"></script>
-    <title> Calculadora de média</title>
+    <title>Calculadora de média</title>
+
 </head>
 <title> Calculadora de média</title>
 </head>
@@ -47,7 +48,7 @@
             <div class="button">
                 <button id="bt" type="submit" onclick="Buscar()">Buscar</button>                
              </div>
-            <div class="resultado" id="resultado">
+            <div class="resultado" id="Resultado">
                      
             </div>
             
